# ats-automation

./: .env.example  .funcignore  .gitignore  API-MIGRATION.md  AZURE-SETUP.md  CLIENT_CONFIG_FORM.md  COORDINATION.md  DEPLOYMENT.md  DOCUMENTATION.md  Dockerfile  NEXT-STEPS.md  QUICKSTART.md  README-INSTALL.md  README.md  Setup-Windows.ps1  auto-update.sh  build-extension.sh  call-log-server.py  chrome-extension.crx  chrome-extension.pem  deploy-azure.sh  docker-compose.yml  function_app.py  host.json  install-extension.ps1  install-windows.ps1  local.settings.json  main.py  pyproject.toml  release-config.json  requirements-server.txt  requirements.txt  setup_azure_functions.py  setup_azure_keyvault.py  start-log-server.sh  start_server.sh  update-extension.bat  update.ps1
.azure/: plan.md
Documentation/: README..md  architecture.md  ats_automation_complete.md  ats_automation_extracted.md  ats_automation_quality_report.md  ats_automation_tables.md  automations..md  clients..md  deployment..md  implementation-plan..md  risks..md  tech-stack..md
chrome-extension/: MODULAR-README.md  README.md  manifest.api.json  manifest.json  privacy-policy.html  wxt.config.js
core/: browser_manager.py  config_loader.py  logger.py
deploy/: RELOAD.md  deploy.ps1  deploy.sh  reload_extension.py  setup-test-workstation.bat
docs/: CHROME_STORE.md  MONITORING.md  REMOTE_MONITORING.md  STATIC_URL_SETUP.md
infra/: main.bicep
log-viewer-app/: Dockerfile  app.py  requirements.txt  startup.sh
nlp-models/: config.json  processor.py
playwright-scripts/: ctm_sf_auto_access.py  (+2 more)
(+222 files in other folders)
